[package]
name = "openssh-sftp-client"
version = "0.10.3"
edition = "2018"

authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]

license = "MIT"
description = "Data format used to communicate with openssh mux server."
repository = "https://github.com/openssh-rust/openssh-sftp-client"

keywords = ["ssh", "multiplex", "async", "network", "sftp"]
categories = ["asynchronous", "network-programming", "api-bindings"]

exclude = ["openssh-portable"]

[workspace]
members = [
    "sftp-test-common",
    "openssh-sftp-error",
    "openssh-sftp-client-lowlevel",
]

[features]
# This feature is for internal testing only!!!
ci-tests = []

[dependencies]
openssh-sftp-error = { version = "0.1.0", path = "openssh-sftp-error" }
openssh-sftp-client-lowlevel = { version = "0.1.0", path = "openssh-sftp-client-lowlevel" }

once_cell = { version = "1.9.0", features = ["parking_lot"] }

# Since concurrent_arena, awaitable and tokio-io-utility uses
# dependency parking_lot anyway, enabling feature parking_lot
# on tokio does not pull in any new dependency.
tokio = { version = "1.11.0", features = ["parking_lot", "sync", "time", "rt"] }

derive_destructure2 = "0.1.0"
bytes = "1"
tokio-io-utility = { version = "0.6.6", features = ["mpsc", "read-exact-to-bytes"] }
tokio-util = { version = "0.7.0" }

[target.'cfg(unix)'.dependencies]
tokio-pipe = "0.2.10"

[dev-dependencies]
tokio = { version = "1.11.0", features = ["rt", "macros"] }
tempfile = "3.1.0"
pretty_assertions = "1.1.0"
sftp-test-common = { path = "sftp-test-common" }
