[package]
name = "openssh-sftp-client"
version = "0.15.4"
edition = "2021"
rust-version = "1.64"

authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]

license = "MIT"
description = "Highlevel API used to communicate with openssh sftp server."
repository = "https://github.com/openssh-rust/openssh-sftp-client"

keywords = ["ssh", "multiplex", "async", "network", "sftp"]
categories = ["asynchronous", "network-programming", "api-bindings"]

[workspace]
members = [
    "sftp-test-common",
    "openssh-sftp-error",
    "openssh-sftp-client-lowlevel",
]

[features]
openssh = ["dep:openssh", "openssh-sftp-error/openssh"]
tracing = ["dep:tracing"]
# This feature is for internal testing only!!!
__ci-tests = []

[package.metadata.docs.rs]
features = ["openssh", "tracing"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
openssh-sftp-error = { version = "0.5.1", path = "openssh-sftp-error" }
openssh-sftp-client-lowlevel = { version = "0.7.2", path = "openssh-sftp-client-lowlevel" }

once_cell = "1.9.0"

tokio = { version = "1.11.0", features = ["sync", "time", "rt", "macros"] }
tracing = { version = "0.1.37", optional = true }

derive_destructure2 = "0.1.0"
bytes = "1.2.1"
tokio-io-utility = "0.7.4"
tokio-util = "0.7.8"

pin-project = "1.0.10"
futures-core = "0.3.28"

scopeguard = "1.1.0"

openssh = { version = "0.11.0", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1.11.0", features = ["rt", "macros"] }
tempfile = "3.1.0"
pretty_assertions = "1.1.0"
sftp-test-common = { path = "sftp-test-common" }
futures-util = "0.3.28"
openssh = { version = "0.11.0", features = ["native-mux"] }
