[package]
name = "openssh-sftp-error"
version = "0.5.1"
edition = "2018"

authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]

license = "MIT"
description = "Error type used when communicating with openssh sftp server."
repository = "https://github.com/openssh-rust/openssh-sftp-client"

keywords = ["ssh", "multiplex", "async", "network", "sftp"]
categories = ["asynchronous", "network-programming", "api-bindings"]

[features]
openssh = ["dep:openssh"]

[package.metadata.docs.rs]
features = ["openssh"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
thiserror = "2.0.0"
awaitable-error = "0.1.0"
openssh-sftp-protocol-error = "0.1.0"
ssh_format_error = "0.1.0"

tokio = { version = "1.11.0", features = ["rt"] }

openssh = { version = "0.11.0", default-features = false, optional = true }
